--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,10 @@ header h3 {
   background-size: .65em auto, 100%; 
 } 
 
-/* .password-control {
+ .password-control {
   width: 10%;
   height: 10%;
-/*   padding-left: 11%; */
+   padding-left: 11%;
   padding-bottom: 5%;
   background: url(../img/view.png) 0 0 no-repeat;
 }
@@ -128,13 +128,13 @@ header h3 {
 .password-control-key{
   width: 10%;
   height: 10%;
-/*   padding-left: 11%; */
+  padding-left: 11%; 
   padding-bottom: 5%;
   background: url(../img/view.png) 0 0 no-repeat;
 }
 .password-control-key.view{
   background: url(../img/no_view.png) 0 0 no-repeat;
-} */
+} 
 
 
 .clearfix:after {
