--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import 'vertical-responsive-menu.min.css';
 @import 'font-awesome.min.css';
-@import 'normalize.css';
+/* @import 'normalize.css'; */
 
 
 @font-face {
